[tool.poetry]
name = "sheffield_hpc"
version = "0.1.0"
description = "University of Sheffield HPC docs"
authors = ["Will Furnass <w.furnass@sheffield.ac.uk>"]
license = "CC-BY-3.0"
readme = 'README.md'
repository = "https://github.com/rcgsheffield/sheffield_hpc/"
homepage = "http://docs.hpc.sheffield.ac.uk"

[tool.poetry.dependencies]
python = "^3.5 || ^3.6 || ^3.7"
sphinx = "~1.5.3"
sphinx-bootstrap-theme = "~0.4.14"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "~0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
